# dss

./: .env  .gitignore  GETTING_STARTED.md  README.md  pyproject.toml  requirements.txt  run_coordinator.py  setup.bat  setup.sh  start.sh
client/: README.md
client/app/core/: __init__.py
client/app/services/: __init__.py  coordinator_client.py  download_pipeline.py  heartbeat_service.py  upload_pipeline.py
client/app/storage/: __init__.py  shard_store.py
client/app/utils/: logging_config.py
dss/: README.md  run_node.py  run_tests.py
dss/client/: __init__.py
dss/client/app/: __init__.py  main.py
dss/server/app/: main.py
dss/shared/: README.md  __init__.py
dss/shared/crypto/: aes_utils.py
dss/shared/encoding/: __init__.py
dss/shared/schemas/: peer.py
dss/tests/: README.md  test_pipeline.py
dss/ui/: README.md  next.config.js  package.json  tailwind.config.js
dss/ui/lib/: utils.js
electron/: README.md  package.json
electron/src/: main.js
server/: README.md  __init__.py
server/app/: __init__.py  main.py
server/app/core/: auth.py  config.py  dependencies.py
server/app/models/: __init__.py  file.py  peer.py
server/app/services/: health_monitor.py  peer_registry.py
shared/crypto/: __init__.py  rsa_utils.py
shared/encoding/: reed_solomon.py
shared/schemas/: __init__.py  file.py  shard.py
tests/: __init__.py  conftest.py  test_crypto.py  test_network_policy.py  test_reed_solomon.py  test_shard_store.py
ui/: package-lock.json  tsconfig.json
ui/app/: layout.jsx  page.jsx
ui/app/node/: page.jsx
ui/components/ui/: alert.jsx  (+2 more)
(+34 files in other folders)
