[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dss"
version = "1.0.0"
description = "DSS — Distributed Storage System"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.1",
    "httpx>=0.27.0",
    "pydantic>=2.7.4",
    "pydantic-settings>=2.3.1",
    "cryptography>=42.0.8",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
test = [
    "pytest>=8.2.2",
    "pytest-asyncio>=0.23.7",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["dss*", "server*", "client*", "shared*"]
